updated manifest file of project #01
- removed unnecessary analytics, ads and IAP packages,
- updated entities package to preview 4.

--- a/01 - Randomly Moving Spheres/Packages/manifest.json
+++ b/01 - Randomly Moving Spheres/Packages/manifest.json
@@ -1,11 +1,9 @@
 {
-    "dependencies": {
-        "com.unity.entities": "0.0.12-preview.1"
-    }, 
-    "registry": "https://staging-packages.unity.com", 
-    "testables": [
-        "com.unity.collections", 
-        "com.unity.entities", 
-        "com.unity.jobs"
-    ]
+  "dependencies": {
+    "com.unity.ads": "exclude",
+    "com.unity.analytics": "exclude",
+    "com.unity.standardevents": "exclude",
+    "com.unity.purchasing": "exclude",
+    "com.unity.entities": "0.0.12-preview.4"
+  }
 }
